--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-.section{
-    @apply py-24 md:py-32 lg:py-40;
+.section {
+  @apply py-24 md:py-32 lg:py-40;
+}
+
+.line {
+  @apply overflow-hidden;
+}
+.word {
+  @apply translate-y-full;
 }
